force-app/main/default/objects/HAM_Object_Fetcher__mdt/HAM_Object_Fetcher__mdt.object-meta.xml
<CustomObject>
    <label>HAM Object Fetcher</label>
    <pluralLabel>HAM Object Fetchers</pluralLabel>
</CustomObject>