force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Additional_Filter__c.field-meta.xml
<CustomField>
    <fullName>HAM_Additional_Filter__c</fullName>
    <label>HAM Additional Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>