force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Default_Display_Value__c.field-meta.xml
<CustomField>
    <fullName>HAM_Default_Display_Value__c</fullName>
    <description>Future purpose to display a text when no results were found.
Can be used currently for mentioning that &quot;This will be under future scope&quot;</description>
    <label>HAM Default Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>