force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Field__c</fullName>
    <label>HAM Display Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>