force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Type__c</fullName>
    <inlineHelpText>Supported Values:
List
String
Hardcoded String</inlineHelpText>
    <label>HAM Display Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>