force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>HAM_Related_Object__c</fullName>
    <label>HAM Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>