force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Table_Default_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Table_Default_Sort_Order__c</fullName>
    <label>HAM Table Default Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>