force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Table_Field_APIs__c.field-meta.xml
<CustomField>
    <fullName>HAM_Table_Field_APIs__c</fullName>
    <label>HAM Table Field APIs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>