force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Table_Limit__c.field-meta.xml
<CustomField>
    <fullName>HAM_Table_Limit__c</fullName>
    <label>HAM Table Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>