force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Table_Load_More__c.field-meta.xml
<CustomField>
    <fullName>HAM_Table_Load_More__c</fullName>
    <defaultValue>true</defaultValue>
    <label>HAM Table Load More</label>
    <type>Checkbox</type>
</CustomField>